Bug 1417842 - Make Cu.readFile and Cu.readURI UTF-8 aware. r=erahm

MozReview-Commit-ID: NwQSoAFzjL